--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<meta http-equiv='expires' content='0'> 
 		<meta http-equiv='pragma' content='no-cache'>
                 <meta charset="UTF-8">
-                <title>Maquina 1 - CRUD Firebase</title>
+                <title>CRUD Firebase - Base64 Image</title>
         </head>
         <body>
-                <h1>Maquina 1</h1>
+                <h1>CRUD Firebase - Base64 Image</h1>
 
                 <form id="task-form">
                         <label for="title">Título:</label>
